# video-extractor

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  comprehensive_profiler.py  improved_profiler.py  local_profiler.py  main.py  performance_profiler.py  performance_profiler_local.py  profiling_results.json  profiling_results_comprehensive.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  simple_profiler.py
app/: __init__.py  main.py
app/api/: endpoints.py  health.py  metrics.py  video.py
app/core/: circuit_breaker.py  config.py  errors.py  logging.py  middleware.py  patches.py
app/models/: job.py
app/schemas/: video.py
app/services/: converter.py  metrics_collector.py  r2_uploader.py  storage.py  video_converter.py
app/utils/: file_utils.py  validators.py
tests/: conftest.py  debug_api_response.py  test_api.py  test_video_conversion.py
tests/integration/: test_all_endpoints.py  test_conversion_pipeline.py
tests/performance/: test_performance.py
tests/unit/: test_circuit_breaker.py  test_converter.py
